# h723-usb-test

./: Cargo.toml  Embed.toml  Makefile.toml  README.md  openocd.cfg  size.py
.cargo/: config.toml
src/: main.rs
