[package]
authors = ["kaitlyn"]
edition = "2021"
readme = "README.md"
name = "embassy-testing"
version = "0.1.0"

[dependencies]
embassy-sync = { version = "0.1.0", path = "embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.1.0", path = "embassy/embassy-executor", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", path = "embassy/embassy-stm32", features = ["nightly", "unstable-traits", "defmt", "stm32f411re", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }
embassy-usb = { version = "0.1.0", path = "embassy/embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.1.0", path = "embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "nightly"], optional = true }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = "1.0"
# alloc-cortex-m = "0.4.0"

# this lets you use `cargo fix`!
[[bin]]
name = "embassy-testing"
test = false
bench = false

[env]
DEFMT_LOG="debug"

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
